<resources>
    <string name="app_name">publiclyVisible</string>
    <string name="title_activity_register">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up_email">e-Mail İle Kayıt Ol</string>
    <string name="action_sign_in_email">Giriş Yap</string>
    <string name="action_sign_up_facebook">Facebook İle Giriş Yap</string>
    <string name="action_sign_up_twitter">Twitter İle Giriş Yap</string>
    <string name="auth_failed">Failed.</string>
    <string name="emailpassword_status_fmt">E Mail Status :</string>
    <string name="not_registered">Hesabın yok mu? Kaydol.</string>
    <string name="information_name" >Ad</string>
    <string name="information_surname" >Soyad</string>
    <string name="information_phone">Numara</string>
    <string name="inofmation_dogum">Doğum Tarihi</string>
</resources>
