<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInformation">

    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="37dp"
        android:text="Seni biraz tanıyalım :" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvInformation"
        android:layout_marginTop="77dp"
        android:ems="10"
        android:hint="@string/information_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvInformation"
        android:layout_marginTop="139dp"
        android:ems="10"
        android:hint="@string/information_surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvInformation"
        android:layout_marginTop="207dp"
        android:ems="10"
        android:hint="@string/information_phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etBorn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tvInformation"
        android:layout_marginBottom="191dp"
        android:ems="10"
        android:hint="@string/inofmation_dogum"
        android:inputType="date" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="101dp"
        android:text="Button" />

</RelativeLayout>